RESOLVED FIXED299091
Elements with background gradients flicker during view-transition
https://bugs.webkit.org/show_bug.cgi?id=299091
Summary Elements with background gradients flicker during view-transition
Ben Frain
Reported 2025-09-18 07:37:03 PDT
Created attachment 476788 [details] Reduction of the bug in a single html file I have attached a reduction. The problem only seems to show when using a 'complex' background (a pattern in this instance but filters can also be problematic). 1. Click 'Deal!' button 2. The top card will move into position with a view-transition 3. Notice that the numbers seem to count up in the stack of cards at the bottom 4. Set the background of .card to a static color and notice the problem does not persist
Attachments
Reduction of the bug in a single html file (6.64 KB, text/html)
2025-09-18 07:37 PDT, Ben Frain
no flags
Radar WebKit Bug Importer
Comment 1 2025-09-18 14:11:57 PDT
Matt Woodrow
Comment 2 2025-09-30 14:36:26 PDT
EWS
Comment 3 2025-10-02 15:24:32 PDT
Committed 300902@main (dd03e50fba5f): <https://commits.webkit.org/300902@main> Reviewed commits have been landed. Closing PR #51593 and removing active labels.
Matt Woodrow
Comment 4 2025-10-21 19:26:00 PDT
*** Bug 300877 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.