Elements with slow-painting content flicker during view-transition https://bugs.webkit.org/show_bug.cgi?id=299091 <rdar://problem/160886647>

Reviewed by Kimmo Kinnunen.

setLayerContentsToImageBuffer async flushes the ImageBuffer, but doesn't wait
for completion.

Reverts the removal of the IPC::Event based implementation of createFlusher for
RemoteImageBufferProxy (removed in 271747@main).

Adds an implemention of PlatformCALayerDelegatedContentsFence that wraps the
ThreadSafeImageBufferFlusher and passes that through to
setRemoteDelegatedContents, so that the remote layer transaction waits on its
completion.

* Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.cpp:
(WebKit::RemoteImageBuffer::setFlushSignal):
(WebKit::RemoteImageBuffer::flushContext):
* Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.h:
* Source/WebKit/GPUProcess/graphics/RemoteImageBuffer.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
(WebKit::RemoteImageBufferProxyFlushFence::create):
(WebKit::RemoteImageBufferProxyFlushFence::waitFor):
(WebKit::RemoteImageBufferProxyFlushFence::tryTakeEvent):
(WebKit::RemoteImageBufferProxyFlushFence::RemoteImageBufferProxyFlushFence):
(WebKit::RemoteImageBufferProxy::backingStoreWillChange):
(WebKit::RemoteImageBufferProxy::disconnect):
(WebKit::RemoteImageBufferProxy::flushDrawingContext):
(WebKit::RemoteImageBufferProxy::flushDrawingContextAsync):
(WebKit::RemoteImageBufferProxy::createFlusher):
(WebKit::RemoteImageBufferProxy::prepareForBackingStoreChange):
* Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/GraphicsLayerCARemote.mm:
(WebKit::GraphicsLayerCARemote::setLayerContentsToImageBuffer):

Canonical link: https://commits.webkit.org/300902@main