Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp
@@ -61,6 +61,67 @@ constexpr uint64_t putPixelBufferBatchedAreaLimit = 60 * 60;
 WTF_MAKE_TZONE_ALLOCATED_IMPL(RemoteImageBufferProxy);
 WTF_MAKE_TZONE_ALLOCATED_IMPL(RemoteSerializedImageBufferProxy);
 
+class RemoteImageBufferProxyFlushFence : public ThreadSafeRefCounted<RemoteImageBufferProxyFlushFence> {
+    WTF_MAKE_NONCOPYABLE(RemoteImageBufferProxyFlushFence);
+    WTF_MAKE_TZONE_ALLOCATED(RemoteImageBufferProxyFlushFence);
+public:
+    static Ref<RemoteImageBufferProxyFlushFence> create(IPC::Event event)
+    {
+        return adoptRef(*new RemoteImageBufferProxyFlushFence { WTFMove(event) });
+    }
+
+    bool waitFor(Seconds timeout)
+    {
+        Locker locker { m_lock };
+        if (m_signaled)
+            return true;
+        m_signaled = m_event.waitFor(timeout);
+        return m_signaled;
+    }
+
+    std::optional<IPC::Event> tryTakeEvent()
+    {
+        if (!m_signaled)
+            return std::nullopt;
+        Locker locker { m_lock };
+        return WTFMove(m_event);
+    }
+
+private:
+    RemoteImageBufferProxyFlushFence(IPC::Event event)
+        : m_event(WTFMove(event))
+    {
+    }
+    Lock m_lock;
+    std::atomic<bool> m_signaled { false };
+    IPC::Event WTF_GUARDED_BY_LOCK(m_lock) m_event;
+};
+
+WTF_MAKE_TZONE_ALLOCATED_IMPL(RemoteImageBufferProxyFlushFence);
+
+namespace {
+
+class RemoteImageBufferProxyFlusher final : public ThreadSafeImageBufferFlusher {
+    WTF_MAKE_TZONE_ALLOCATED(RemoteImageBufferProxyFlusher);
+public:
+    RemoteImageBufferProxyFlusher(Ref<RemoteImageBufferProxyFlushFence> flushState)
+        : m_flushState(WTFMove(flushState))
+    {
+    }
+
+    void flush() final
+    {
+        Ref { m_flushState }->waitFor(RemoteRenderingBackendProxy::defaultTimeout);
+    }
+
+private:
+    Ref<RemoteImageBufferProxyFlushFence> m_flushState;
+};
+
+WTF_MAKE_TZONE_ALLOCATED_IMPL(RemoteImageBufferProxyFlusher);
+
+}
+
 RemoteImageBufferProxy::RemoteImageBufferProxy(Parameters parameters, const ImageBufferBackend::Info& info, RemoteRenderingBackendProxy& renderingBackend)
     : ImageBuffer(parameters, info, { }, nullptr)
     , m_context(ImageBuffer::colorSpace(), ImageBuffer::renderingMode() , { { }, ImageBuffer::logicalSize() }, ImageBuffer::baseTransform(), renderingBackend)
@@ -301,6 +362,7 @@ void RemoteImageBufferProxy::disconnect()
     m_context.disconnect();
     if (m_backend)
         prepareForBackingStoreChange();
+    m_pendingFlush = nullptr;
     m_backend = nullptr;
 }
 
@@ -357,9 +419,14 @@ void RemoteImageBufferProxy::flushDrawingContext()
     if (!m_renderingBackend) [[unlikely]]
         return;
     if (m_context.consumeHasDrawn()) {
+        m_pendingFlush = nullptr;
         TraceScope tracingScope(FlushRemoteImageBufferStart, FlushRemoteImageBufferEnd);
         sendSync(Messages::RemoteImageBuffer::FlushContextSync());
         return;
+    }
+    if (RefPtr pendingFlush = std::exchange(m_pendingFlush, nullptr)) {
+        bool success = pendingFlush->waitFor(RemoteRenderingBackendProxy::defaultTimeout);
+        ASSERT_UNUSED(success, success); // Currently there is nothing to be done on a timeout.
     }
 }
 
@@ -369,10 +436,38 @@ bool RemoteImageBufferProxy::flushDrawingContextAsync()
         return false;
 
     if (!m_context.consumeHasDrawn())
-        return false;
+        return m_pendingFlush;
+
+    std::optional<IPC::Event> event;
+    // FIXME: This only recycles the event if the previous flush has been
+    // waited on successfully. It should be possible to have the same semaphore
+    // being used in multiple still-pending flushes, though if one times out,
+    // then the others will be waiting on the wrong signal.
+    if (RefPtr pendingFlush = m_pendingFlush)
+        event = pendingFlush->tryTakeEvent();
+    if (!event) {
+        auto pair = IPC::createEventSignalPair();
+        if (!pair) {
+            flushDrawingContext();
+            return false;
+        }
+
+        event = WTFMove(pair->event);
+        send(Messages::RemoteImageBuffer::SetFlushSignal(WTFMove(pair->signal)));
+    }
 
     send(Messages::RemoteImageBuffer::FlushContext());
+    m_pendingFlush = RemoteImageBufferProxyFlushFence::create(WTFMove(*event));
     return true;
+}
+
+std::unique_ptr<ThreadSafeImageBufferFlusher> RemoteImageBufferProxy::createFlusher()
+{
+    if (!m_renderingBackend) [[unlikely]]
+        return nullptr;
+    if (!flushDrawingContextAsync())
+        return nullptr;
+    return makeUnique<RemoteImageBufferProxyFlusher>(Ref<RemoteImageBufferProxyFlushFence> { *m_pendingFlush });
 }
 
 void RemoteImageBufferProxy::prepareForBackingStoreChange()
